--- a/hugo.toml
+++ b/hugo.toml
@@ -6,3 +6,6 @@ theme = "hugo-theme-learn"
 # For search functionality
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
+
+landingPageURL = "/iot-workshop-doc/"
+landingPageName = "<i class='fas fa-home'></i> Home"
