--- a/hugo.toml
+++ b/hugo.toml
@@ -1,11 +1,38 @@
-languageCode = 'de-de'
+baseURL = '/'
 title = 'IoT Workshop'
-
 theme = "hugo-theme-learn"
+defaultContentLanguage = 'de'
+defaultContentLanguageInSubdir = true
+
+[params]
+  # "red", "blue", "green".
+  themeVariant = "green"
 
 # For search functionality
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
 
-landingPageURL = "/iot-workshop-doc/"
-landingPageName = "<i class='fas fa-home'></i> Home"
+[[production]]
+  baseURL = "https://boebelix.github.io/iot-workshop-doc"
+
+[languages]
+  [languages.de]
+    contentDir = 'content/de'
+    disabled = false
+    languageCode = 'de-DE'
+    languageDirection = 'ltr'
+    languageName = 'Deutsch'
+    title = 'Projekt Dokumentation'
+    weight = 1
+    [languages.de.params]
+      subtitle = 'Referenz, Tutorials und Erklärungen'
+  [languages.en]
+    contentDir = 'content/en'
+    disabled = false
+    languageCode = 'en-US'
+    languageDirection = 'ltr'
+    languageName = 'English'
+    title = 'Project Documentation'
+    weight = 2
+    [languages.en.params]
+      subtitle = 'Reference, Tutorials, and Explanations'
