--- a/hugo.toml
+++ b/hugo.toml
@@ -12,8 +12,9 @@ defaultContentLanguageInSubdir = true
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
 
-[[production]]
+[environment]
   baseURL = "https://boebelix.github.io/iot-workshop-doc"
+  environment = "production"
 
 [languages]
   [languages.de]
