--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -59,7 +59,7 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "${{ env.HUGO_PROD_BASE_URL }}/"          
+            --baseURL "$HUGO_PROD_BASE_URL /"          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
