--- a/.github/workflows/hugo.yaml
+++ b/.github/workflows/hugo.yaml
@@ -59,7 +59,7 @@ jobs:
           hugo \
             --gc \
             --minify \
-            --baseURL "$GITHUB_HUGO_PROD_BASE_URL"          
+            --baseURL "${{ steps.pages.outputs.base_url }}/iot-workshop-doc/"          
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
@@ -69,7 +69,7 @@ jobs:
   deploy:
     environment:
       name: github-pages
-      url: $GITHUB_HUGO_PROD_BASE_URL
+      url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
     steps:
