--- a/hugo.toml
+++ b/hugo.toml
@@ -1,5 +1,5 @@
 baseURL = 'https://boebelix.github.io/'
-# relativeURLs = true
+relativeURLs = true
 canonifyurls = true
 title = 'IoT Workshop'
 theme = "hugo-theme-learn"
